--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> DEMO </title>
+        <meta charset='utf-8' />
         <script src="script.js"></script>
     </head>
     <body>
